fix github action publish branch name

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,10 +1,10 @@
 
-name: Deploy  package
+name: Deploy package
 
 on:
   push:
     branches:
-      - "master"
+      - "main"
 
 jobs:
   publish:
