--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tanu",
   "version": "0.1.0",
-  "description": "A oversimplification of the TypeScript Compiler API for defining and generating source files",
+  "description": "An oversimplification of the TypeScript Compiler API for defining and generating source files",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
