--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "compiler api",
     "abstraction",
     "wrapper",
-    "tsc"
+    "tsc",
+    "generation"
   ],
-  "author": "",
+  "author": "Aries Clark <me@ariesclark.com> (https://ariesclark.com)",
   "license": "MIT",
   "devDependencies": {
     "@ariesclark/eslint-config": "^1.4.0",
