--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "ava"
   },
   "keywords": [
     "typescript",
@@ -26,11 +27,21 @@
   "license": "MIT",
   "devDependencies": {
     "@ariesclark/eslint-config": "^1.4.0",
+    "@ava/typescript": "^4.0.0",
     "@types/node": "^18.6.3",
+    "ava": "^5.2.0",
     "eslint": "^8.21.0"
   },
   "dependencies": {
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
-  }
+  },
+  "ava": {
+    "typescript": {
+      "rewritePaths": {
+        "src/": "dist/"
+      },
+      "compile": "tsc"
+    }
+}
 }
