--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
   "license": "MIT",
   "devDependencies": {
     "@ariesclark/eslint-config": "^1.4.0",
-    "@ava/typescript": "^4.0.0",
     "@types/node": "^18.6.3",
     "ava": "^5.2.0",
-    "eslint": "^8.21.0"
+    "eslint": "^8.21.0",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
   "ava": {
-    "typescript": {
-      "rewritePaths": {
-        "src/": "dist/"
-      },
-      "compile": "tsc"
-    }
-}
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
+  }
 }
