--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "ava"
+    "test": "c8 ava"
   },
   "keywords": [
     "typescript",
@@ -29,6 +29,7 @@
     "@ariesclark/eslint-config": "^1.4.0",
     "@types/node": "^18.6.3",
     "ava": "^5.2.0",
+    "c8": "^7.13.0",
     "eslint": "^8.21.0",
     "ts-node": "^10.9.1"
   },
