--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ava": "^5.2.0",
     "c8": "^7.13.0",
     "eslint": "^8.21.0",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
